# llama-github

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  VISION_AND_ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: gitleaks.toml
.github/workflows/: publish.yml  secret-scan.yml  tests.yml
docs/: api_reference.md  data_collection_policy.md  high_level_architecture  installation.md  usage.md
docs/examples/: advanced_integration.md  answer_with_context.md  simple_query.md
examples/: _helpers.py  pr_content.py  simple_query.py
llama-github.git/: config  packed-refs
llama-github.git/filter-repo/: commit-map  ref-map  suboptimal-issues
llama-github.git/info/: refs
llama-github.git/objects/info/: commit-graph  packs
llama-github.git/objects/pack/: pack-cffc348f73869c6bd769b06653b44dce8da9fb61.bitmap  pack-cffc348f73869c6bd769b06653b44dce8da9fb61.idx  pack-cffc348f73869c6bd769b06653b44dce8da9fb61.pack  pack-ff3ed7ada528a4a9a91aeca4b4ff5f386f2dcd7b.bitmap  pack-ff3ed7ada528a4a9a91aeca4b4ff5f386f2dcd7b.idx  pack-ff3ed7ada528a4a9a91aeca4b4ff5f386f2dcd7b.pack
llama_github/: __init__.py  github_rag.py  logger.py  utils.py
llama_github/config/: config.json  config.py
llama_github/data_retrieval/: __init__.py  github_api.py  github_entities.py
llama_github/github_integration/: __init__.py  github_auth_manager.py
llama_github/llm_integration/: initial_load.py  llm_handler.py
llama_github/rag_processing/: rag_processor.py
scripts/: __init__.py  verify_distribution_contents.py
temp/: project_structure.json
tests/: __init__.py  conftest.py  test_data_retrieval.py  test_distribution_contents.py  test_github_auth_manager.py  test_github_rag.py  test_initial_load.py  test_llm_handler.py  test_logger.py  test_logging_privacy.py  test_minimal_imports.py  test_rag_processor.py  test_utils.py
