[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-github"
dynamic = ["version"]
description = "GitHub retrieval and context generation utilities for coding assistants and AI developer workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Jet Xu", email = "Voldemort.xu@foxmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = [
  "PyGithub>=2.4,<3",
  "PyJWT[crypto]>=2.13,<3",
  "aiohttp>=3.14.1,<4",
  "ipython>=8.10,<9",
  "langchain-core>=1.3.3,<2",
  "langchain-mistralai>=1.0,<2",
  "langchain-openai>=1.1.14,<2",
  "langchain-text-splitters>=1.1.2,<2",
  "nest-asyncio>=1.6,<2",
  "numpy>=1.26.4,<3",
  "pydantic>=2.10,<3",
  "python-dateutil>=2.9,<3",
  "requests>=2.33,<3",
  "tokenizers>=0.22.1,<1",
  "transformers>=5.5,<6",
  "urllib3>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pip-audit>=2.10,<3",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
  "twine>=6.2,<7",
]

[project.urls]
Homepage = "https://github.com/JetXu-LLM/llama-github"
Repository = "https://github.com/JetXu-LLM/llama-github"
Issues = "https://github.com/JetXu-LLM/llama-github/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["llama_github", "llama_github.*"]

[tool.setuptools.package-data]
llama_github = ["config/config.json"]

[tool.setuptools.dynamic]
version = { attr = "llama_github.version.__version__" }
