[metadata]
name = llama-github
version = 0.1.5
author = Jet Xu
author_email = Voldemort.xu@foxmail.com
description = Llama-github is an open-source Python library that empowers LLM Chatbots, AI Agents, and Auto-dev Agents to conduct Retrieval from actively selected GitHub public projects. It Augments through LLMs and Generates context for any coding question, in order to streamline the development of sophisticated AI-driven applications.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/JetXu-LLM/llama-github
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
include =
    llama_github
    llama_github.*

[options.package_data]
llama_github = config/config.json

[options.extras_require]
dev =
    pytest
    black
    flake8
